<resources>
    <string name="app_name">SmartRooms</string>

    <string name="base_setting">Base Setting</string>
    <string name="groupwave_information">Groupwave Information</string>
    <string name="meeting_information">Meeting Information</string>
    <string name="individual_setting">Individual Setting</string>
    <string name="support">Support</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
